--- a/app/src/main/res/layout/room_management_user_view.xml
+++ b/app/src/main/res/layout/room_management_user_view.xml
@@ -145,7 +145,7 @@
                     android:baselineAligned="false"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:text="Số lượng"
+                    android:text="Số lượng:"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
