rename file class

--- a/app/src/main/res/layout/room_management_user_view.xml
+++ b/app/src/main/res/layout/room_management_user_view.xml
@@ -8,8 +8,8 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
+
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/nested_scroll_my_rooms"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,30 +18,35 @@
             android:layout_height="match_parent"
             android:background="#ffffff"
             android:orientation="vertical">
+
             <TableLayout
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="100dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp">
+
                 <TableRow
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:weightSum="3">
-                    <LinearLayout android:layout_width="match_parent"
-                        android:layout_marginRight="15dp"
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:orientation="vertical"
+                        android:layout_marginRight="15dp"
+                        android:layout_weight="1"
                         android:background="@drawable/custom_user_view"
-                        android:layout_weight="1">
+                        android:orientation="vertical">
+
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_gravity="center_horizontal"
-                            android:src="@drawable/ic_png_room_100"
-                            android:layout_marginTop="10dp"/>
+                            android:layout_marginTop="10dp"
+                            android:src="@drawable/ic_png_room_100" />
 
                         <TextView
                             android:id="@+id/txt_quantity_room"
@@ -57,24 +62,28 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Phòng đăng"
-                            android:textSize="18dp"
-                            android:textColor="#FFFFFF"
                             android:layout_marginTop="0dp"
-                            android:textAlignment="center"/>
+                            android:text="Phòng đăng"
+                            android:textAlignment="center"
+                            android:textColor="#FFFFFF"
+                            android:textSize="18dp" />
                     </LinearLayout>
-                    <LinearLayout android:layout_width="match_parent"
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:layout_marginRight="15dp"
-                        android:orientation="vertical"
+                        android:layout_weight="1"
                         android:background="@drawable/custom_user_comment"
-                        android:layout_weight="1">
+                        android:orientation="vertical">
+
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_gravity="center_horizontal"
-                            android:src="@drawable/ic_png_view_100"
-                            android:layout_marginTop="10dp"/>
+                            android:layout_marginTop="10dp"
+                            android:src="@drawable/ic_png_view_100" />
+
                         <TextView
                             android:id="@+id/txt_quantity_view"
                             android:layout_width="match_parent"
@@ -85,26 +94,31 @@
                             android:textColor="#FFFFFF"
                             android:textSize="18dp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Lượt xem"
-                            android:textSize="18dp"
-                            android:textColor="#FFFFFF"
                             android:layout_marginTop="0dp"
-                            android:textAlignment="center"/>
+                            android:text="Lượt xem"
+                            android:textAlignment="center"
+                            android:textColor="#FFFFFF"
+                            android:textSize="18dp" />
                     </LinearLayout>
-                    <LinearLayout android:layout_width="match_parent"
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:orientation="vertical"
+                        android:layout_weight="1"
                         android:background="@drawable/custom_user_room"
-                        android:layout_weight="1">
+                        android:orientation="vertical">
+
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_gravity="center_horizontal"
-                            android:src="@drawable/ic_png_comment_100"
-                            android:layout_marginTop="10dp"/>
+                            android:layout_marginTop="10dp"
+                            android:src="@drawable/ic_png_comment_100" />
+
                         <TextView
                             android:id="@+id/txt_quantity_comment"
                             android:layout_width="match_parent"
@@ -115,14 +129,15 @@
                             android:textColor="#FFFFFF"
                             android:textSize="18dp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Bình luận"
-                            android:textSize="18dp"
-                            android:textColor="#FFFFFF"
                             android:layout_marginTop="0dp"
-                            android:textAlignment="center"/>
+                            android:text="Bình luận"
+                            android:textAlignment="center"
+                            android:textColor="#FFFFFF"
+                            android:textSize="18dp" />
                     </LinearLayout>
                 </TableRow>
             </TableLayout>
@@ -137,9 +152,9 @@
                 android:id="@+id/lnLt_quantity_top_my_rooms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
-                android:orientation="horizontal"
-                android:layout_marginLeft="10dp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -164,8 +179,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@color/white">
+                android:background="@color/white"
+                android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_Main_Room"
@@ -173,7 +188,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_marginLeft="10dp"
-                    android:gravity="center"/>
+                    android:gravity="center" />
 
                 <!--Processbar-->
                 <ProgressBar
