--- a/app/src/main/res/layout/account_view.xml
+++ b/app/src/main/res/layout/account_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Views.Account_View"
+    tools:context=".Views.AccountView"
     android:backgroundTint="@color/white"
     android:background="@color/white"
     android:orientation="vertical">
