--- a/app/src/main/res/layout/activity_search_view.xml
+++ b/app/src/main/res/layout/activity_search_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Views.searchView">
+    tools:context=".Views.SearchView">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
