--- a/app/src/main/res/layout/main__menu.xml
+++ b/app/src/main/res/layout/main__menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Views.Main_Menu">
+    tools:context=".Views.MainMenu">
 
     <FrameLayout
         android:id="@+id/fragment_container"
